@@ -352,7 +352,7 @@ def otherRootSettings =
     scriptedUnpublished := scriptedUnpublishedTask.evaluated,
     scriptedSource := (sourceDirectory in sbtProj).value / "sbt-test",
     // scriptedPrescripted := { addSbtAlternateResolver _ },
-    scriptedLaunchOpts := List("-XX:MaxPermSize=256M", "-Xmx360M"),
+    scriptedLaunchOpts := List("-Xmx1024M", "-Xms512M"),
     publishAll := { val _ = (publishLocal).all(ScopeFilter(inAnyProject)).value },
     publishLocalBinAll := { val _ = (publishLocalBin).all(ScopeFilter(inAnyProject)).value },
     aggregate in bintrayRelease := false
@@ -362,7 +362,8 @@ def otherRootSettings =
         ()
       },
       scriptedLaunchOpts := {
-        List("-Xmx512M",
+        List("-Xmx1024M",
+             "-Xms512M",
              "-Dsbt.override.build.repos=true",
              s"""-Dsbt.repository.config=${scriptedSource.value / "repo.config"}""")
       },
